Adding more google analytics

--- a/index.htm
+++ b/index.htm
@@ -236,10 +236,10 @@ Probably not.<br/><br/>  But we’re going to thumb our noses at common sense an
 					<h2>Contact info</h2>
 					<span>Ones&Zeros</span>
 					<span>E: <a href="mailto:1sand0smusic@gmail.com">1sand0smusic@gmail.com</a></span><br/>
-					<span>Facebook: <a href="https://www.facebook.com/OnesAndZerosMusic">www.facebook.com/OnesAndZerosMusic</a></span><br/>
-					<span>Soundcloud: <a href="https://www.soundcloud.com/ones-4/">www.soundcloud.com/ones-4/</a><span><br/>
-					<span>Bandcamp: <a href="https://www.onesandzerosmusic.bandcamp.com/">www.onesandzerosmusic.bandcamp.com/</a></span>
-					<span>YouTube: <a href="https://www.youtube.com/user/onesandzerosmusic">www.youtube.com/user/onesandzerosmusic</a></span>
+					<span>Facebook:<a href="https://www.facebook.com/OnesAndZerosMusic" target="_blank">www.facebook.com/OnesAndZerosMusic</a></span><br/>
+					<span>Soundcloud: <a href="https://www.soundcloud.com/ones-4/" target="_blank">www.soundcloud.com/ones-4/</a><span><br/>
+					<span>Bandcamp: <a href="https://www.onesandzerosmusic.bandcamp.com/" target="_blank">www.onesandzerosmusic.bandcamp.com/</a></span><br/>
+					<span>YouTube: <a href="https://www.youtube.com/user/onesandzerosmusic" target="_blank">www.youtube.com/user/onesandzerosmusic</a></span>
 				</div>
 			</div>
 		</div><!-- /#contact -->
