--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,13 @@
 	<div id="content">
 		<div class="page" id="home">
 			<div id="cross">
-				<a href="https://www.facebook.com/events/1459641497612964/" target="_new"><img style="max-width: 100%; position: absolute; top:-30%" src="images/posters/gig04.jpg"/></a>
+				<!--
+				<a href="https://www.facebook.com/events/1459641497612964/" target="_new"><img style="max-width: 100%; position: absolute; top:-30%" src="images/posters/gig04.jpg"/></a>-->
+			</div>
+
+			<div class="bcampDload">
+				<span><p>Download the new album 'The City Don't Care.</p><p>Name your price, but play nice.</p>
+				<a href="http://onesandzerosmusic.bandcamp.com/"><img src="images/bcampBtn.png" /></a><p>(by donation)</p></span>
 			</div>
 
 			<div class="fbEvent">
@@ -77,6 +83,7 @@
 					<div class="live upcoming">
 						<span class="title">UPCOMING SHOWS</span>
 						<!-- GIG -->
+						<!--
 						<div class="gig">
 							<div class="img">
 								<img  src="images/posters/gig04.jpg"/>
@@ -88,13 +95,26 @@
 								<ul>
 									<li>Ones+Zeros</li>
 									<li>The Flintettes</li>
+									<li><span><a href="http://northerntickets.com/events/oneszeros-the-city-dont-care-ep-release/" target="_blank">Get cheaper advanced tickets here</a></span></li>
 								</ul>
 							</div>
-						</div><!-- /GIG -->
+						</div>--><!-- /GIG -->
 					</div>
 					<div class="padding"></div>
 					<div class="live former">
 						<span class="title">PAST SHOWS</span>
+						<!-- GIG -->
+						<div class="gig">
+							<div class="img">
+								<img src="images/venues/mediaClubLogo.jpg" />
+							</div>
+								<div class="info">
+								<h2>The Media Club, Vancouver BC</h2>
+								<span class="date">20/06/14 - 8PM</span>
+								<span class="price">w/ The Flintettes</span>
+							</div>
+						</div><!-- /GIG -->
+
 						<!-- GIG -->
 						<div class="gig">
 							<div class="img">
@@ -156,6 +176,7 @@
   							<a href="images/posters/gig04.jpg" title="" data-thumbnail="images/posters/gig04.jpg" data-description=""></a>
   						</div>
   						<div title="News">
+  							<a href="images/news/p23-18-06-14-arts.jpg" title="" data-thumbnail="images/news/p23-18-06-14-arts.jpg" data-description=""></a>
   						</div>
 					</div>
 				</div>
